@@ -2,6 +2,10 @@
  - (stevesk) [configure.ac] bug #255 LOGIN_NEEDS_UTMPX for AIX.
  - (bal) removed GNUism for getops in ssh-agent since glibc lacks optreset.
  - (bal) add extern char *getopt.  Based on report by dtucker@zip.com.au 
+ - OpenBSD CVS Sync
+   - stevesk@cvs.openbsd.org 2002/06/22 02:00:29
+     [ssh.h]
+     correct comment
 
 20020622
  - (djm) Update README.privsep; spotted by fries@
@@ -1011,4 +1015,4 @@
  - (stevesk) entropy.c: typo in debug message
  - (djm) ssh-keygen -i needs seeded RNG; report from markus@
 
-$Id: ChangeLog,v 1.2244 2002/06/23 00:20:50 mouring Exp $
+$Id: ChangeLog,v 1.2245 2002/06/23 00:30:30 mouring Exp $
